exports[`no-useless-iterator-to-array > invalid(1): iterator.toArray().find(((value, index) => value === index) as Predicate) 1`] = `

  1 | iterator.toArray().find(((value, index) => value === index) as Predicate)

`;

exports[`no-useless-iterator-to-array > invalid(1): iterator.toArray().find(((value, index) => value === index) as Predicate) 2`] = `

Message:
> 1 | iterator.toArray().find(((value, index) => value === index) as Predicate)
    |          ^^^^^^^ \`Iterator\` has a \`.find()\` method, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\` and use \`Iterator#find()\`.:
  1 | iterator.find(((value, index) => value === index) as Predicate)

`;

exports[`no-useless-iterator-to-array > invalid(1): new Set(iterator.toArray()) 1`] = `

  1 | new Set(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(1): new Set(iterator.toArray()) 2`] = `

Message:
> 1 | new Set(iterator.toArray())
    |                  ^^^^^^^ \`new Set(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new Set(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(10): Promise.allSettled(iterator.toArray()) 1`] = `

  1 | Promise.allSettled(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(10): Promise.allSettled(iterator.toArray()) 2`] = `

Message:
> 1 | Promise.allSettled(iterator.toArray())
    |                             ^^^^^^^ \`Promise.allSettled(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Promise.allSettled(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(11): Promise.any(iterator.toArray()) 1`] = `

  1 | Promise.any(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(11): Promise.any(iterator.toArray()) 2`] = `

Message:
> 1 | Promise.any(iterator.toArray())
    |                      ^^^^^^^ \`Promise.any(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Promise.any(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(12): Promise.race(iterator.toArray()) 1`] = `

  1 | Promise.race(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(12): Promise.race(iterator.toArray()) 2`] = `

Message:
> 1 | Promise.race(iterator.toArray())
    |                       ^^^^^^^ \`Promise.race(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Promise.race(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(13): Array.from(iterator.toArray()) 1`] = `

  1 | Array.from(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(13): Array.from(iterator.toArray()) 2`] = `

Message:
> 1 | Array.from(iterator.toArray())
    |                     ^^^^^^^ \`Array.from(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | Array.from(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(14): Object.fromEntries(iterator.toArray()) 1`] = `

  1 | Object.fromEntries(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(14): Object.fromEntries(iterator.toArray()) 2`] = `

Message:
> 1 | Object.fromEntries(iterator.toArray())
    |                             ^^^^^^^ \`Object.fromEntries(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | Object.fromEntries(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(15): Uint8Array.from(iterator.toArray()) 1`] = `

  1 | Uint8Array.from(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(15): Uint8Array.from(iterator.toArray()) 2`] = `

Message:
> 1 | Uint8Array.from(iterator.toArray())
    |                          ^^^^^^^ \`Uint8Array.from(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | Uint8Array.from(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(16): Array.from(iterator.toArray(), mapFn) 1`] = `

  1 | Array.from(iterator.toArray(), mapFn)

`;

exports[`no-useless-iterator-to-array > invalid(16): Array.from(iterator.toArray(), mapFn) 2`] = `

Message:
> 1 | Array.from(iterator.toArray(), mapFn)
    |                     ^^^^^^^ \`Array.from(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Array.from(iterator, mapFn)

`;

exports[`no-useless-iterator-to-array > invalid(17): Uint8Array.from(iterator.toArray(), mapFn) 1`] = `

  1 | Uint8Array.from(iterator.toArray(), mapFn)

`;

exports[`no-useless-iterator-to-array > invalid(17): Uint8Array.from(iterator.toArray(), mapFn) 2`] = `

Message:
> 1 | Uint8Array.from(iterator.toArray(), mapFn)
    |                          ^^^^^^^ \`Uint8Array.from(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Uint8Array.from(iterator, mapFn)

`;

exports[`no-useless-iterator-to-array > invalid(18): Object.fromEntries(iterator.toArray(), extra) 1`] = `

  1 | Object.fromEntries(iterator.toArray(), extra)

`;

exports[`no-useless-iterator-to-array > invalid(18): Object.fromEntries(iterator.toArray(), extra) 2`] = `

Message:
> 1 | Object.fromEntries(iterator.toArray(), extra)
    |                             ^^^^^^^ \`Object.fromEntries(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Object.fromEntries(iterator, extra)

`;

exports[`no-useless-iterator-to-array > invalid(19): for (const x of iterator.toArray()); 1`] = `

  1 | for (const x of iterator.toArray());

`;

exports[`no-useless-iterator-to-array > invalid(19): for (const x of iterator.toArray()); 2`] = `

Message:
> 1 | for (const x of iterator.toArray());
    |                          ^^^^^^^ \`for…of\`/\`for await…of\` can iterate over an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | for (const x of iterator);

`;

exports[`no-useless-iterator-to-array > invalid(2): iterator.toArray().reduce(((accumulator, value, index) => accumulator + value + index) satisfies Reducer) 1`] = `

  1 | iterator.toArray().reduce(((accumulator, value, index) => accumulator + value + index) satisfies Reducer)

`;

exports[`no-useless-iterator-to-array > invalid(2): iterator.toArray().reduce(((accumulator, value, index) => accumulator + value + index) satisfies Reducer) 2`] = `

Message:
> 1 | iterator.toArray().reduce(((accumulator, value, index) => accumulator + value + index) satisfies Reducer)
    |          ^^^^^^^ \`Iterator\` has a \`.reduce()\` method, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\` and use \`Iterator#reduce()\`.:
  1 | iterator.reduce(((accumulator, value, index) => accumulator + value + index) satisfies Reducer)

`;

exports[`no-useless-iterator-to-array > invalid(2): new Map(iterator.toArray()) 1`] = `

  1 | new Map(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(2): new Map(iterator.toArray()) 2`] = `

Message:
> 1 | new Map(iterator.toArray())
    |                  ^^^^^^^ \`new Map(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new Map(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(20): for (const x of foo.bar().toArray()); 1`] = `

  1 | for (const x of foo.bar().toArray());

`;

exports[`no-useless-iterator-to-array > invalid(20): for (const x of foo.bar().toArray()); 2`] = `

Message:
> 1 | for (const x of foo.bar().toArray());
    |                           ^^^^^^^ \`for…of\`/\`for await…of\` can iterate over an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | for (const x of foo.bar());

`;

exports[`no-useless-iterator-to-array > invalid(21): for (const x of iterator.toArray()) { break; } 1`] = `

  1 | for (const x of iterator.toArray()) { break; }

`;

exports[`no-useless-iterator-to-array > invalid(21): for (const x of iterator.toArray()) { break; } 2`] = `

Message:
> 1 | for (const x of iterator.toArray()) { break; }
    |                          ^^^^^^^ \`for…of\`/\`for await…of\` can iterate over an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | for (const x of iterator) { break; }

`;

exports[`no-useless-iterator-to-array > invalid(22): async () => { for await (const x of iterator.toArray()); } 1`] = `

  1 | async () => { for await (const x of iterator.toArray()); }

`;

exports[`no-useless-iterator-to-array > invalid(22): async () => { for await (const x of iterator.toArray()); } 2`] = `

Message:
> 1 | async () => { for await (const x of iterator.toArray()); }
    |                                              ^^^^^^^ \`for…of\`/\`for await…of\` can iterate over an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | async () => { for await (const x of iterator); }

`;

exports[`no-useless-iterator-to-array > invalid(23): function * foo() {\n\tyield * iterator.toArray();\n} 1`] = `

  1 | function * foo() {
  2 | 	yield * iterator.toArray();
  3 | }

`;

exports[`no-useless-iterator-to-array > invalid(23): function * foo() {\n\tyield * iterator.toArray();\n} 2`] = `

Message:
  1 | function * foo() {
> 2 | 	yield * iterator.toArray();
    | 	                 ^^^^^^^ \`yield*\` can delegate to an iterable, \`.toArray()\` is unnecessary.
  3 | }

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | function * foo() {
  2 | 	yield * iterator;
  3 | }

`;

exports[`no-useless-iterator-to-array > invalid(24): const result = iterator\n\t.take(10)\n\t.toArray()\n\t.every(x => x > 0); 1`] = `

  1 | const result = iterator
  2 | 	.take(10)
  3 | 	.toArray()
  4 | 	.every(x => x > 0);

`;

exports[`no-useless-iterator-to-array > invalid(24): const result = iterator\n\t.take(10)\n\t.toArray()\n\t.every(x => x > 0); 2`] = `

Message:
  1 | const result = iterator
  2 | 	.take(10)
> 3 | 	.toArray()
    | 	 ^^^^^^^ \`Iterator\` has a \`.every()\` method, \`.toArray()\` is unnecessary.
  4 | 	.every(x => x > 0);

Suggestion 1/1: Remove \`.toArray()\` and use \`Iterator#every()\`.:
  1 | const result = iterator
  2 | 	.take(10)
  3 | 	.every(x => x > 0);

`;

exports[`no-useless-iterator-to-array > invalid(25): [...iterator.toArray()] 1`] = `

  1 | [...iterator.toArray()]

`;

exports[`no-useless-iterator-to-array > invalid(25): [...iterator.toArray()] 2`] = `

Message:
> 1 | [...iterator.toArray()]
    |              ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | [...iterator]

`;

exports[`no-useless-iterator-to-array > invalid(26): [a, ...iterator.toArray()] 1`] = `

  1 | [a, ...iterator.toArray()]

`;

exports[`no-useless-iterator-to-array > invalid(26): [a, ...iterator.toArray()] 2`] = `

Message:
> 1 | [a, ...iterator.toArray()]
    |                 ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | [a, ...iterator]

`;

exports[`no-useless-iterator-to-array > invalid(27): [...iterator.toArray(), b] 1`] = `

  1 | [...iterator.toArray(), b]

`;

exports[`no-useless-iterator-to-array > invalid(27): [...iterator.toArray(), b] 2`] = `

Message:
> 1 | [...iterator.toArray(), b]
    |              ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | [...iterator, b]

`;

exports[`no-useless-iterator-to-array > invalid(28): call(...iterator.toArray()) 1`] = `

  1 | call(...iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(28): call(...iterator.toArray()) 2`] = `

Message:
> 1 | call(...iterator.toArray())
    |                  ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | call(...iterator)

`;

exports[`no-useless-iterator-to-array > invalid(29): call(a, ...iterator.toArray()) 1`] = `

  1 | call(a, ...iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(29): call(a, ...iterator.toArray()) 2`] = `

Message:
> 1 | call(a, ...iterator.toArray())
    |                     ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | call(a, ...iterator)

`;

exports[`no-useless-iterator-to-array > invalid(3): new WeakSet(iterator.toArray()) 1`] = `

  1 | new WeakSet(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(3): new WeakSet(iterator.toArray()) 2`] = `

Message:
> 1 | new WeakSet(iterator.toArray())
    |                      ^^^^^^^ \`new WeakSet(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new WeakSet(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(30): new Foo(...iterator.toArray()) 1`] = `

  1 | new Foo(...iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(30): new Foo(...iterator.toArray()) 2`] = `

Message:
> 1 | new Foo(...iterator.toArray())
    |                     ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | new Foo(...iterator)

`;

exports[`no-useless-iterator-to-array > invalid(31): new Set((iterator.toArray())) 1`] = `

  1 | new Set((iterator.toArray()))

`;

exports[`no-useless-iterator-to-array > invalid(31): new Set((iterator.toArray())) 2`] = `

Message:
> 1 | new Set((iterator.toArray()))
    |                   ^^^^^^^ \`new Set(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new Set((iterator))

`;

exports[`no-useless-iterator-to-array > invalid(32): new Set(iterator.toArray(/* comment */)) 1`] = `

  1 | new Set(iterator.toArray(/* comment */))

`;

exports[`no-useless-iterator-to-array > invalid(32): new Set(iterator.toArray(/* comment */)) 2`] = `

Message:
> 1 | new Set(iterator.toArray(/* comment */))
    |                  ^^^^^^^ \`new Set(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

`;

exports[`no-useless-iterator-to-array > invalid(33): Promise.all((iterator.toArray())) 1`] = `

  1 | Promise.all((iterator.toArray()))

`;

exports[`no-useless-iterator-to-array > invalid(33): Promise.all((iterator.toArray())) 2`] = `

Message:
> 1 | Promise.all((iterator.toArray()))
    |                       ^^^^^^^ \`Promise.all(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Promise.all((iterator))

`;

exports[`no-useless-iterator-to-array > invalid(34): Array.from((iterator.toArray())) 1`] = `

  1 | Array.from((iterator.toArray()))

`;

exports[`no-useless-iterator-to-array > invalid(34): Array.from((iterator.toArray())) 2`] = `

Message:
> 1 | Array.from((iterator.toArray()))
    |                      ^^^^^^^ \`Array.from(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | Array.from((iterator))

`;

exports[`no-useless-iterator-to-array > invalid(35): Object.fromEntries((iterator.toArray())) 1`] = `

  1 | Object.fromEntries((iterator.toArray()))

`;

exports[`no-useless-iterator-to-array > invalid(35): Object.fromEntries((iterator.toArray())) 2`] = `

Message:
> 1 | Object.fromEntries((iterator.toArray()))
    |                              ^^^^^^^ \`Object.fromEntries(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | Object.fromEntries((iterator))

`;

exports[`no-useless-iterator-to-array > invalid(36): for (const x of (iterator.toArray())); 1`] = `

  1 | for (const x of (iterator.toArray()));

`;

exports[`no-useless-iterator-to-array > invalid(36): for (const x of (iterator.toArray())); 2`] = `

Message:
> 1 | for (const x of (iterator.toArray()));
    |                           ^^^^^^^ \`for…of\`/\`for await…of\` can iterate over an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | for (const x of (iterator));

`;

exports[`no-useless-iterator-to-array > invalid(37): [...(iterator.toArray())] 1`] = `

  1 | [...(iterator.toArray())]

`;

exports[`no-useless-iterator-to-array > invalid(37): [...(iterator.toArray())] 2`] = `

Message:
> 1 | [...(iterator.toArray())]
    |               ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | [...(iterator)]

`;

exports[`no-useless-iterator-to-array > invalid(38): call(...(iterator.toArray())) 1`] = `

  1 | call(...(iterator.toArray()))

`;

exports[`no-useless-iterator-to-array > invalid(38): call(...(iterator.toArray())) 2`] = `

Message:
> 1 | call(...(iterator.toArray()))
    |                   ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | call(...(iterator))

`;

exports[`no-useless-iterator-to-array > invalid(39): new Foo(...(iterator.toArray())) 1`] = `

  1 | new Foo(...(iterator.toArray()))

`;

exports[`no-useless-iterator-to-array > invalid(39): new Foo(...(iterator.toArray())) 2`] = `

Message:
> 1 | new Foo(...(iterator.toArray()))
    |                      ^^^^^^^ Spread works on iterables, \`.toArray()\` is unnecessary.

Output:
  1 | new Foo(...(iterator))

`;

exports[`no-useless-iterator-to-array > invalid(4): new WeakMap(iterator.toArray()) 1`] = `

  1 | new WeakMap(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(4): new WeakMap(iterator.toArray()) 2`] = `

Message:
> 1 | new WeakMap(iterator.toArray())
    |                      ^^^^^^^ \`new WeakMap(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new WeakMap(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(40): const iterator = set.values().map(fn); new Set(iterator.toArray()); 1`] = `

  1 | const iterator = set.values().map(fn); new Set(iterator.toArray());

`;

exports[`no-useless-iterator-to-array > invalid(40): const iterator = set.values().map(fn); new Set(iterator.toArray()); 2`] = `

Message:
> 1 | const iterator = set.values().map(fn); new Set(iterator.toArray());
    |                                                         ^^^^^^^ \`new Set(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | const iterator = set.values().map(fn); new Set(iterator);

`;

exports[`no-useless-iterator-to-array > invalid(41): Promise.all(iterator.toArray(/* comment */)) 1`] = `

  1 | Promise.all(iterator.toArray(/* comment */))

`;

exports[`no-useless-iterator-to-array > invalid(41): Promise.all(iterator.toArray(/* comment */)) 2`] = `

Message:
> 1 | Promise.all(iterator.toArray(/* comment */))
    |                      ^^^^^^^ \`Promise.all(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

`;

exports[`no-useless-iterator-to-array > invalid(42): iterator.toArray().forEach() 1`] = `

  1 | iterator.toArray().forEach()

`;

exports[`no-useless-iterator-to-array > invalid(42): iterator.toArray().forEach() 2`] = `

Message:
> 1 | iterator.toArray().forEach()
    |          ^^^^^^^ \`Iterator\` has a \`.forEach()\` method, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\` and use \`Iterator#forEach()\`.:
  1 | iterator.forEach()

`;

exports[`no-useless-iterator-to-array > invalid(5): new Int8Array(iterator.toArray()) 1`] = `

  1 | new Int8Array(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(5): new Int8Array(iterator.toArray()) 2`] = `

Message:
> 1 | new Int8Array(iterator.toArray())
    |                        ^^^^^^^ \`new Int8Array(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new Int8Array(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(6): new Uint8Array(iterator.toArray()) 1`] = `

  1 | new Uint8Array(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(6): new Uint8Array(iterator.toArray()) 2`] = `

Message:
> 1 | new Uint8Array(iterator.toArray())
    |                         ^^^^^^^ \`new Uint8Array(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new Uint8Array(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(7): new Float64Array(iterator.toArray()) 1`] = `

  1 | new Float64Array(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(7): new Float64Array(iterator.toArray()) 2`] = `

Message:
> 1 | new Float64Array(iterator.toArray())
    |                           ^^^^^^^ \`new Float64Array(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Output:
  1 | new Float64Array(iterator)

`;

exports[`no-useless-iterator-to-array > invalid(8): new Uint8Array(iterator.toArray(), extra) 1`] = `

  1 | new Uint8Array(iterator.toArray(), extra)

`;

exports[`no-useless-iterator-to-array > invalid(8): new Uint8Array(iterator.toArray(), extra) 2`] = `

Message:
> 1 | new Uint8Array(iterator.toArray(), extra)
    |                         ^^^^^^^ \`new Uint8Array(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | new Uint8Array(iterator, extra)

`;

exports[`no-useless-iterator-to-array > invalid(9): Promise.all(iterator.toArray()) 1`] = `

  1 | Promise.all(iterator.toArray())

`;

exports[`no-useless-iterator-to-array > invalid(9): Promise.all(iterator.toArray()) 2`] = `

Message:
> 1 | Promise.all(iterator.toArray())
    |                      ^^^^^^^ \`Promise.all(…)\` accepts an iterable, \`.toArray()\` is unnecessary.

Suggestion 1/1: Remove \`.toArray()\`.:
  1 | Promise.all(iterator)

`;
